MYFAT/MYFAT/MYFAT/loggggg.txt
gcc -W -Wall   -c -o main.o main.c
In file included from main.c:6:0:
header.h:16:22: error: conflicting types for ‘uint32’
 typedef unsigned int uint32;
                      ^
In file included from fat_defs.h:5:0,
                 from header.h:5,
                 from main.c:6:
fat_types.h:23:23: note: previous declaration of ‘uint32’ was here
 typedef unsigned long uint32;
                       ^
In file included from main.c:6:0:
header.h: In function ‘fatfs_list_directory_start’:
header.h:959:47: warning: unused parameter ‘fs’ [-Wunused-parameter]
 void fatfs_list_directory_start(struct fatfs *fs, struct fs_dir_list_status *dirls, uint32 StartCluster)
                                               ^
header.h: In function ‘fatfs_cache_get_next_cluster’:
header.h:2371:48: warning: unused parameter ‘fs’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                ^
header.h:2371:61: warning: unused parameter ‘file’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                             ^
header.h:2371:74: warning: unused parameter ‘clusterIdx’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                                          ^
header.h:2371:94: warning: unused parameter ‘pNextCluster’ [-Wunused-parameter]
 int fatfs_cache_get_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 *pNextCluster)
                                                                                              ^
header.h: In function ‘fatfs_cache_set_next_cluster’:
header.h:2386:48: warning: unused parameter ‘fs’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                ^
header.h:2386:61: warning: unused parameter ‘file’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                             ^
header.h:2386:74: warning: unused parameter ‘clusterIdx’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                                          ^
header.h:2386:93: warning: unused parameter ‘nextCluster’ [-Wunused-parameter]
 int fatfs_cache_set_next_cluster(struct fatfs *fs, FL_FILE *file, uint32 clusterIdx, uint32 nextCluster)
                                                                                             ^
main.c: In function ‘main’:
main.c:33:25: warning: passing argument 1 of ‘fl_attach_media’ from incompatible pointer type
     if (fl_attach_media(media_read, media_write) != FAT_INIT_OK)
                         ^
In file included from main.c:6:0:
header.h:424:5: note: expected ‘fn_diskio_read’ but argument is of type ‘int (*)(long unsigned int,  unsigned char *, long unsigned int)’
 int fl_attach_media(fn_diskio_read rd, fn_diskio_write wr)
     ^
main.c:33:37: warning: passing argument 2 of ‘fl_attach_media’ from incompatible pointer type
     if (fl_attach_media(media_read, media_write) != FAT_INIT_OK)
                                     ^
In file included from main.c:6:0:
header.h:424:5: note: expected ‘fn_diskio_write’ but argument is of type ‘int (*)(long unsigned int,  unsigned char *, long unsigned int)’
 int fl_attach_media(fn_diskio_read rd, fn_diskio_write wr)
     ^
main.c:23:14: warning: unused parameter ‘argc’ [-Wunused-parameter]
 int main(int argc, char *argv[])
              ^
main.c:23:26: warning: unused parameter ‘argv’ [-Wunused-parameter]
 int main(int argc, char *argv[])
                          ^
main.c: In function ‘read_entry_from_pipe’:
main.c:122:9: warning: variable ‘ret’ set but not used [-Wunused-but-set-variable]
     int ret;
         ^
In file included from main.c:6:0:
main.c: At top level:
header.h:141:12: warning: ‘fat_list_is_empty’ defined but not used [-Wunused-function]
 static int fat_list_is_empty(struct fat_list *list)
            ^
main.c: In function ‘main’:
main.c:44:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
